# cardio_classifier_next_gen

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  dev.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250821_0001_create_variant_table.py  20250821_0002_auth_and_audit.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth.py  variants.py
backend/app/core/: security.py
backend/app/models/: classification_event.py  user.py  variant.py
backend/app/repository/: classification_events.py  users.py  variants.py
backend/app/services/: hgvs_validate.py
backend/cardio_classifier_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_acmg_engine.py  test_acmg_engine_pvs1.py  test_classification_matrix.py  test_deterministic.py  test_hgvs_validation.py  test_persistence.py
docs/: architecture.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/components/: AuthPanel.tsx  RuleBadges.tsx
frontend/src/lib/: api.ts  auth.ts  variants.ts
frontend/src/pages/: App.tsx
infra/: docker-compose.dev.yml
mcp-server/: Dockerfile  pyproject.toml  server.py
mcp-server/cardio_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
