[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardio-classifier-backend"
version = "0.1.0"
description = "Backend API for Cardio Classifier"
authors = [{name="Cardio Team"}]
# README omitted in editable install due to relative path constraint; root README covers project.
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "sqlalchemy>=2",
  "alembic",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "loguru",
  "httpx",
  "tenacity",
  "aiosqlite",
  "celery[redis]",
  "redis",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "types-requests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic", "tests"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
